--- a/src/main/resources/assets/missingthings/lang/en_US.lang
+++ b/src/main/resources/assets/missingthings/lang/en_US.lang
@@ -2,9 +2,12 @@ item.sleeping_bag.name=Sleeping Bag
 item.hang_glider.name=Hang Glider
 item.flight_ring.name=Ring of Flight
 item.bedrock_shard.name=Bedrock Shard
+item.rough_diamond.name=Rough Diamond
+item.rough_diamond_gem.name=Rough Diamond Gem
 
 tile.floating_block.name=Floating Block
 tile.bedrock_glass.name=Bedrock Glass
 tile.bedrock_sand.name=Bedrock Infused Sand
+tile.rough_diamond_ore.name=Rough Diamond Ore
 
 itemGroup.tabMissing=Missing Things
